# repository-service-tuf-cli

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.rst  MAINTAINERS.rst  Makefile  Pipfile  README.md  README.rst  SECURITY.md  SECURITY_INSIGHTS.yml  custom_md_payload_name.json  docker-compose.yml  metadata-update-payload.json  pyproject.toml  requirements-dev.txt  requirements.txt  rstuf.yaml  setup.py  tox.ini
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: cd.yml  ci.yml  functional-tests.yml  review-approved.yml  reviewd-ft.yml  scorecard.yml  update-pre-commit-hooks.yml  update-python-deps.yml
docs/: ceremony.md  requirements.txt
docs/diagrams/: repository-service-tuf-cli-C3.puml
docs/source/: conf.py  index.rst
docs/source/devel/: design.rst  index.rst  kaprien.cli.admin.rst  kaprien.cli.rst  kaprien.helpers.rst  kaprien.rst  modules.rst  repository_service_tuf.cli.admin.delegations.rst  repository_service_tuf.cli.admin.metadata.rst  repository_service_tuf.cli.admin.rst  repository_service_tuf.cli.admin.send.rst  repository_service_tuf.cli.admin_legacy.rst  repository_service_tuf.cli.artifact.rst  repository_service_tuf.cli.key.rst  repository_service_tuf.cli.rst  repository_service_tuf.cli.task.rst  repository_service_tuf.helpers.rst  repository_service_tuf.rst  tuf_repository_service.cli.admin.rst  tuf_repository_service.cli.rst  tuf_repository_service.helpers.rst  tuf_repository_service.rst
docs/source/guide/: admin_legacy.rst  index.rst
kaprien/: __init__.py  __version__.py
kaprien/admin/: __init__.py  ceremony.py
kaprien/cli/: __init__.py
kaprien/cli/admin/: __init__.py  ceremony.py  login.py  token.py
kaprien/helpers/: api_client.py  hash_bins.py  tuf.py
repository_service_tuf/: __init__.py  __version__.py  constants.py
repository_service_tuf/cli/: __init__.py  admin2.py
repository_service_tuf/cli/admin/: __init__.py  ceremony.py  helpers.py  import_artifacts.py  import_targets.py  login.py  metadata.py  sign.py  token.py  update.py
repository_service_tuf/cli/admin/delegations/: __init__.py  delete.py  new.py
repository_service_tuf/cli/admin/metadata/: __init__.py  sign.py  stop_sign.py  update.py
repository_service_tuf/cli/admin/send/: __init__.py  bootstrap.py  sign.py  update.py
repository_service_tuf/cli/admin2/: __init__.py  ceremony.py  helpers.py  sign.py  update.py
repository_service_tuf/cli/admin_legacy/: __init__.py  ceremony.py  import_artifacts.py  metadata.py
repository_service_tuf/cli/artifact/: __init__.py  add.py  delete.py  download.py  repository.py
repository_service_tuf/cli/key/: __init__.py  generate.py  generate_key.py  info.py
repository_service_tuf/cli/task/: __init__.py  info.py
repository_service_tuf/helpers/: __init__.py  api_client.py  cli.py  hash_bins.py  tuf.py
tests/: conftest.py  test_kaprien.py  test_tuf_repository_service.py
tests/cli/: test_ceremony.py
tests/files/: ChrisCornel.key  KurtCobain.key  KurtCobain.key.pub  README.md  bin1.key  bin1.key.pub  bins1.key  bins1.key.pub  das-root.json  root.json  snapshot1.key  snapshot1.key.pub  targets2.key.pub  timestamp1.key  timestamp1.key.pub
tests/files/artifact_download/: root.json
tests/files/key_storage/: JanisJoplin.key.new  JanisJoplin.pub.new  JimiHendrix.key.new  JimiHendrix.pub.new  hsm-9c-ecc.crt  hsm-9c.ecdsa  online-rsa.key.new  online.key.new  online.pub.new
tests/files/payload/: ceremony.json  ceremony_das.json  sign.json  sign_pending_roles.json  update.json  update_das.json
tests/files/pem/: new_online_key_ecdsa  online_key_rsa  root.json
tests/files/root/: v1.json  v2.json
tests/tools/: generate_keys.py
tests/unit/cli/: test___init__.py  test__init__.py  test_admin2.py
tests/unit/cli/admin/: __init__.py  test_admin.py  test_ceremony.py  test_helpers.py  test_import_artifacts.py  test_import_targets.py  test_login.py  test_md_update.py  test_metadata.py  test_metadata_update.py  test_sign.py  test_update.py
tests/unit/cli/admin2/: test_ceremony.py  test_helpers.py  test_sign.py  test_update.py
tests/unit/cli/artifact/: test_add.py  (+3 more)
tests/unit/helpers/: test_api_client.py  test_cli.py  test_hash_bins.py  test_tuf.py
tuf_repository_service/: __version__.py
tuf_repository_service/cli/: __init__.py
tuf_repository_service/cli/admin/: __init__.py  ceremony.py  login.py  token.py
tuf_repository_service/helpers/: api_client.py
(+15 files in other folders)
