[build-system]
# hatchling pinned for reproducibility: version should be kept up-to-date
requires = ["hatchling==0.22.0", "dynaconf[ini]==3.1.9"]
build-backend = "hatchling.build"

[project]
name = "repository-service-tuf"
description = 'Repository Service for TUF Command Line Interface'
readme = "README.rst"
requires-python = ">=3.9"
license = { text = "MIT"}
keywords = []
authors = [
  { name = "Kairo de Araujo", email = "kairo@dearaujo.nl" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click",
  "dynaconf",
  "PyNaCl",
  "requests",
  "rich",
  "rich-click",
  "securesystemslib",
  "tuf==2.0.0",
]
dynamic = ["version"]

[tool.hatch.version]
path = "repository_service_tuf/__version__.py"

[project.scripts]
rstuf = "repository_service_tuf.cli:rstuf"
