[build-system]
# hatchling pinned for reproducibility: version should be kept up-to-date
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "repository-service-tuf"
description = 'Repository Service for TUF Command Line Interface'
readme = "README.rst"
requires-python = ">=3.10"
license = { text = "MIT"}
keywords = []
authors = [
  { name = "Kairo de Araujo", email = "kairo@dearaujo.nl" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",  
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "beaupy",
  "click",
  "auto-click-auto",
  "dynaconf[ini]",
  "setuptools",
  "PyNaCl",
  "requests",
  "rich",
  "rich-click",
  "prompt-toolkit",
  "securesystemslib[crypto]",
  "tuf",
  "sigstore",
  "boto3",
  "google-cloud-kms",
  "hvac",
  "azure-keyvault-keys",
  "pykcs11",
  "asn1crypto",
]
dynamic = ["version"]

[tool.mypy]
exclude = "docs/"

[[tool.mypy.overrides]]
module = ["dynaconf", "pretend", "securesystemslib.*",]
ignore_missing_imports = true

[tool.hatch.version]
path = "repository_service_tuf/__version__.py"

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
psycopg2 = ["psycopg2>=2.9.5"]  # required by import-artifacts sub-command
sqlalchemy = ["sqlalchemy>=2.0.1"]  # required by import-artifacts sub-command

[project.scripts]
rstuf = "repository_service_tuf.cli:rstuf"
